--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -42,7 +42,8 @@
 		"vite-svg-loader": "^5.1.0",
 		"vue": "^3.5.13",
 		"vue-component-type-helpers": "^3.1.8",
-		"vue-router": "^4.6.0"
+		"vue-router": "^4.6.0",
+		"wrangler": "^4.65.0"
 	},
 	"dependencies": {
 		"@codemirror/commands": "^6.3.2",
