deploy(ui): fix storybook routes

--- a/packages/ui/wrangler.jsonc
+++ b/packages/ui/wrangler.jsonc
@@ -3,8 +3,6 @@
   "compatibility_date": "2026-02-12",
   "workers_dev": true,
   "assets": {
-    "directory": "./storybook-static",
-    "html_handling": "force-trailing-slash",
-    "not_found_handling": "404-page"
+    "directory": "./storybook-static"
   }
 }
