mc ping server info + timeout

--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -166,3 +166,4 @@ MURALPAY_TRANSFER_API_KEY=none
 MURALPAY_SOURCE_ACCOUNT_ID=none
 
 DEFAULT_AFFILIATE_REVENUE_SPLIT=0.1
+SERVER_PING_TIMEOUT=10000
