--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ bytes = "1.10.1"
 censor = "0.3.0"
 chardetng = "0.1.17"
 chrono = "0.4.42"
+async-minecraft-ping = { version = "0.8.0" }
 cidre = { version = "0.11.3", default-features = false, features = [
   "macos_15_0"
 ] }
