--- a/apps/labrinth/Cargo.toml
+++ b/apps/labrinth/Cargo.toml
@@ -21,7 +21,12 @@ actix-ws = { workspace = true }
 arc-swap = { workspace = true }
 argon2 = { workspace = true }
 ariadne = { workspace = true }
-async-stripe = { workspace = true, features = ["billing", "checkout", "connect", "webhook-events"] }
+async-stripe = { workspace = true, features = [
+  "billing",
+  "checkout",
+  "connect",
+  "webhook-events"
+] }
 async-trait = { workspace = true }
 base64 = { workspace = true }
 bitflags = { workspace = true }
@@ -38,6 +43,7 @@ deadpool-redis.workspace = true
 derive_more = { workspace = true, features = ["deref", "deref_mut"] }
 dotenvy = { workspace = true }
 either = { workspace = true }
+elasticsearch = { workspace = true, features = ["experimental-apis"] }
 eyre = { workspace = true }
 futures = { workspace = true }
 futures-util = { workspace = true }
@@ -46,27 +52,26 @@ hmac = { workspace = true }
 hyper-rustls = { workspace = true }
 hyper-util = { workspace = true }
 image = { workspace = true, features = [
-	"avif",
-	"bmp",
-	"dds",
-	"exr",
-	"ff",
-	"gif",
-	"hdr",
-	"ico",
-	"jpeg",
-	"png",
-	"pnm",
-	"qoi",
-	"tga",
-	"tiff",
-	"webp",
+  "avif",
+  "bmp",
+  "dds",
+  "exr",
+  "ff",
+  "gif",
+  "hdr",
+  "ico",
+  "jpeg",
+  "png",
+  "pnm",
+  "qoi",
+  "tga",
+  "tiff",
+  "webp",
 ] }
 itertools = { workspace = true }
 json-patch = { workspace = true }
 lettre = { workspace = true }
 meilisearch-sdk = { workspace = true, features = ["reqwest"] }
-elasticsearch = { workspace = true, features = ["experimental-apis"] }
 modrinth-util = { workspace = true, features = ["decimal", "sentry", "utoipa"] }
 muralpay = { workspace = true, features = ["client", "mock", "utoipa"] }
 murmur2 = { workspace = true }
@@ -77,8 +82,16 @@ rand = { workspace = true }
 rand_chacha = { workspace = true }
 redis = { workspace = true, features = ["ahash", "r2d2", "tokio-comp"] }
 regex = { workspace = true }
-reqwest = { workspace = true, features = ["http2", "json", "multipart", "rustls-tls-webpki-roots"] }
-rust_decimal = { workspace = true, features = ["serde-with-float", "serde-with-str"] }
+reqwest = { workspace = true, features = [
+  "http2",
+  "json",
+  "multipart",
+  "rustls-tls-webpki-roots"
+] }
+rust_decimal = { workspace = true, features = [
+  "serde-with-float",
+  "serde-with-str"
+] }
 rust_iso3166 = { workspace = true }
 rust-s3 = { workspace = true }
 rustls.workspace = true
@@ -91,14 +104,14 @@ sha1 = { workspace = true }
 sha2 = { workspace = true }
 spdx = { workspace = true, features = ["text"] }
 sqlx = { workspace = true, features = [
-	"chrono",
-	"json",
-	"macros",
-	"migrate",
-	"postgres",
-	"runtime-tokio",
-	"rust_decimal",
-	"tls-rustls-aws-lc-rs",
+  "chrono",
+  "json",
+  "macros",
+  "migrate",
+  "postgres",
+  "runtime-tokio",
+  "rust_decimal",
+  "tls-rustls-aws-lc-rs",
 ] }
 sqlx-tracing = { workspace = true, features = ["postgres"] }
 strum = { workspace = true }
@@ -133,8 +146,8 @@ iana-time-zone = { workspace = true }
 jemalloc_pprof = { workspace = true, features = ["flamegraph"] }
 tikv-jemalloc-ctl = { workspace = true, features = ["stats"] }
 tikv-jemallocator = { workspace = true, features = [
-	"profiling",
-	"unprefixed_malloc_on_supported_platforms",
+  "profiling",
+  "unprefixed_malloc_on_supported_platforms",
 ] }
 
 [features]
