Elastic basic https auth

--- a/apps/labrinth/.env.docker-compose
+++ b/apps/labrinth/.env.docker-compose
@@ -22,6 +22,8 @@ MEILISEARCH_WRITE_ADDRS=http://localhost:7700
 MEILISEARCH_KEY=modrinth
 ELASTICSEARCH_URL=http://localhost:9200
 ELASTICSEARCH_INDEX_PREFIX=labrinth
+ELASTICSEARCH_USERNAME=elastic
+ELASTICSEARCH_PASSWORD=elastic
 
 REDIS_URL=redis://labrinth-redis
 REDIS_MIN_CONNECTIONS=0
