--- a/apps/labrinth/.env.local
+++ b/apps/labrinth/.env.local
@@ -37,6 +37,8 @@ MEILISEARCH_META_NAMESPACE=
 # Elasticsearch configuration
 ELASTICSEARCH_URL=http://localhost:9200
 ELASTICSEARCH_INDEX_PREFIX=labrinth
+ELASTICSEARCH_USERNAME=
+ELASTICSEARCH_PASSWORD=
 
 REDIS_URL=redis://localhost
 REDIS_MIN_CONNECTIONS=0
