fixes to tracking server joins

--- a/packages/app-lib/.env.prod
+++ b/packages/app-lib/.env.prod
@@ -1,4 +1,5 @@
 MODRINTH_URL=https://modrinth.com/
+MODRINTH_API_BASE_URL=https://api.modrinth.com/
 MODRINTH_API_URL=https://api.modrinth.com/v2/
 MODRINTH_API_URL_V3=https://api.modrinth.com/v3/
 MODRINTH_SOCKET_URL=wss://api.modrinth.com/
