--- a/packages/app-lib/.env.staging
+++ b/packages/app-lib/.env.staging
@@ -1,4 +1,5 @@
 MODRINTH_URL=https://staging.modrinth.com/
+MODRINTH_API_BASE_URL=https://staging-api.modrinth.com/
 MODRINTH_API_URL=https://staging-api.modrinth.com/v2/
 MODRINTH_API_URL_V3=https://staging-api.modrinth.com/v3/
 MODRINTH_SOCKET_URL=wss://staging-api.modrinth.com/
