--- a/packages/app-lib/.env.local
+++ b/packages/app-lib/.env.local
@@ -1,4 +1,5 @@
 MODRINTH_URL=http://localhost:3000/
+MODRINTH_API_BASE_URL=http://localhost:8000/
 MODRINTH_API_URL=http://127.0.0.1:8000/v2/
 MODRINTH_API_URL_V3=http://127.0.0.1:8000/v3/
 MODRINTH_SOCKET_URL=ws://127.0.0.1:8000/
